# Proyecto_Insect

./: INSECTID-PROYECT.code-workspace  README.md  insect_db.sql
backend/: api.py  insect_model_api.py  main.py  models.py  pf1.ipynb  pyproject.toml
frontend/: home.py  pyproject.toml
frontend/pages/: ClasInsectos.py  Geo_Interaccion.py  Geo_localización_Insectos.py  Insectoteca.py  Interaccion_participativa.py  Nuestro_Modelo.py  Proyecto.py  Recursos_de_aprendizaje.py  Teams.py
model/: pyproject.toml  train.ipynb
