[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["arodrigues <arodriguez@ipinnovatech.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.32.2"
watchdog = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
